Side nav done. Secondary navigation added

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
     --timberwolf: #cfdbd5ff;
     --alabaster: #e8eddfff;
     --maize-crayola: #f5cb5cff;
+    --light-crayola: #f6e0a6ff;
     --eerie-black: #242423ff;
     --jet: #333533ff;
     --black: #000000;
