--- a/src/Stylesheets/Sidebar.css
+++ b/src/Stylesheets/Sidebar.css
@@ -112,6 +112,17 @@
     padding: 20px 50px 20px 0;
 }
 
+.secondary-nav-secondary {
+    background-color: var(--gray);
+    padding: 20px 50px 20px 0;
+}
+
+.user-header-icon {
+    width: 25px;
+    height: 25px;
+    margin-right: 15px;
+}
+
 .main-content {
     padding: 60px 10px 40px;
 }
