--- a/src/Stylesheets/Admin-Tables-styles.css
+++ b/src/Stylesheets/Admin-Tables-styles.css
@@ -53,15 +53,16 @@ th {
 }
 
 .view-more-btn {
-    padding: 10px 30px;
-    border: 3px solid var(--maize-crayola);
-    border-radius: 5px;
+    padding: 8px 30px;
+    border: 2px solid var(--alabaster);
     font-weight: 500;
     background-color: var(--white);
+    width: 200px;
+    border-radius: 5px;
 }
 
 .view-more-btn:hover {
-    background-color: var(--maize-crayola);
+    background-color: var(--alabaster);
 }
 
 .input-search-icon {
@@ -78,6 +79,7 @@ th {
 .user-badge {
     font-size: 14px;
 }
+
 
 /*.class-view-more-btn{*/
 /*    border: 3px solid var(--maize-crayola);*/
