--- a/src/Stylesheets/Student-Teacher-UI-styles.css
+++ b/src/Stylesheets/Student-Teacher-UI-styles.css
@@ -39,6 +39,12 @@
     margin-top: 10px;
 }
 
+.st-class-img {
+    height: 200px;
+    width: 300px;
+    object-fit: contain;
+}
+
 .st-card-footer {
     margin-top: 20px;
     padding-top: 20px;
