Fourth commit of classroom management

--- a/src/Stylesheets/Admin-Tables-styles.css
+++ b/src/Stylesheets/Admin-Tables-styles.css
@@ -53,10 +53,9 @@ th {
 }
 
 .view-more-btn {
-    padding: 10px 30px;
+
     border: 3px solid var(--maize-crayola);
-    border-radius: 5px;
-    font-weight: 500;
+
     background-color: var(--white);
 }
 
@@ -74,4 +73,37 @@ th {
     margin-left: 10px;
     margin-right: 20px;
 }
+.user-badge {
+    font-size: 15px;
+}
 
+.class-view-more-btn{
+    border: 3px solid var(--maize-crayola);
+    margin-right: 10px;
+    background-color: var(--maize-crayola);
+}
+.class-view-more-btn:hover{
+    border: 3px solid var(--maize-crayola);
+    color: var(--maize-crayola);
+    background-color: var(--white);
+}
+.class-delete-btn{
+    border: 3px solid var(--bs-red);
+    margin-right: 10px;
+    background-color: var(--bs-red);
+}
+.class-delete-btn:hover{
+    border: 3px solid var(--bs-red);
+    color: var(--bs-red);
+    background-color: var(--white);
+}
+.class-edit-btn{
+    border: 3px solid var(--bs-blue);
+    margin-right: 10px;
+    background-color: var(--bs-blue);
+}
+.class-edit-btn:hover{
+    border: 3px solid var(--bs-blue);
+    color: var(--bs-blue);
+    background-color: var(--white);
+}
