--- a/src/Stylesheets/Student-Teacher-UI-styles.css
+++ b/src/Stylesheets/Student-Teacher-UI-styles.css
@@ -17,7 +17,7 @@
     font-size: 30px;
 }
 
-.st-class-card {
+.st-class-card, .st-notice-card {
     border: 3px solid var(--maize-crayola);
     border-radius: 15px;
     background-color: var(--white);
